fixed overflowing and changed the background picture

--- a/css/drinks.css
+++ b/css/drinks.css
@@ -82,6 +82,7 @@ li {
 }
 
 .bold {
+  width: 100%;
   display: flex;
   align-items: start;
   font-weight: bold;
@@ -101,6 +102,14 @@ li {
 }
 
 @media only screen and (max-width: 400px) {
+  .hero {
+    height: 100%;
+    background-image: url(../assets/Bar\ filled\ alcohol.jpg);
+    background-size: cover;
+    position: fixed;
+    overflow: scroll;
+  }
+
   .container {
     width: 100%;
     grid-template-columns: 1fr;
@@ -122,7 +131,7 @@ li {
   }
 
   .name p {
-    width: 100%;
+    width: 200px;
     padding: 10px 10px 0 10px;
     text-align: center;
   }
